--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "express-rate-limit": "^6.2.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-winston": "^4.2.0",
